avoid duplicate safe area inset when drawer is visible in non-overlay mode

--- a/packages/vaadin-lumo-styles/src/components/app-layout.css
+++ b/packages/vaadin-lumo-styles/src/components/app-layout.css
@@ -46,16 +46,11 @@
     padding-top: max(0px, var(--safe-area-inset-top) - var(--vaadin-app-layout-navbar-offset-top));
     padding-bottom: max(0px, var(--safe-area-inset-bottom) - var(--vaadin-app-layout-navbar-offset-bottom));
     box-sizing: border-box;
+    padding-inline: var(--safe-area-inset-inline-start) var(--safe-area-inset-inline-end);
   }
 
-  :host(:dir(ltr)) [part~='content'] {
-    padding-left: var(--safe-area-inset-left);
-    padding-right: var(--safe-area-inset-right);
-  }
-
-  :host(:dir(rtl)) [part~='content'] {
-    padding-left: var(--safe-area-inset-left);
-    padding-right: var(--safe-area-inset-right);
+  :host([drawer-opened]:not([overlay])) [part~='content'] {
+    padding-inline-start: 0;
   }
 
   @media (pointer: coarse) and (max-width: 800px) and (min-height: 500px) {
